# hpffp

./: .gitignore
ch01/: ch01-notes.md  ex01.md  ex02.md
ch02/: ex01.md  ex02.hs  ex03.hs  ex04.md  ex06.md  ex07.hs  ex08.md  ex09.md  ex10.md  ex11.hs  ex27.hs  ex27a.md
ch03/: area.hs  ex01.md  ex02.md  ex03.md  ex04.md  ex05.md  ex06.hs  ex07.hs  ex08.hs  ex09.hs  print2.hs  print3.hs  print3broken.hs  print3flipped.hs  top.hs
ch04/: ex01.md  ex02.hs  ex03.md  ex04.md  ex05.hs  ex06.hs  ex07.hs  ex08.hs  ex09.md  fun.hs  greetIfCool1.hs  greetIfCool2.hs  pm.hs
ch05/: ch05-examples.hs  ex01.md  ex02.md  ex03.hs  ex04.md  ex05.md  ex06.hs  ex07.hs  ex08.md  ex09.hs  ex10.hs  ex11.hs  ex12.hs  ex13.hs  typeInference1.hs  typeInference2.hs
ch06/: ch06-02.hs  ch06-03.hs  ch06-04.hs  ch06-05.hs  ch06-work.hs  ex01.hs  ex02.md  ex03.md  ex04.md  ex05.hs  ex06.hs  ex07.hs  ex08.hs  numPractice.hs
ch07/: arith2.hs  arith4.hs  ch07-01.hs  ch07-02.hs  ch07-03.hs  ch07-04.hs  ch07-05.hs  ch07-06.hs  ch07-07.hs  ch07-08.hs  ex01.hs  ex02.hs  ex03.hs  ex04.hs  ex05.hs  ex06.md  ex07.hs  greetIfCool3.hs  registeredUser1.hs
ch08/: ch08-01.hs  ch08-02.hs  ch08-03.hs  ch08-04.hs  ex01.hs  ex02.md  ex03.hs  ex04.hs  ex05.hs  ex06.hs  ex07.hs
ch09/: ch09-01.hs  ch09-02.hs  ch09-03.hs  cipher.hs  ex01.hs  ex02.hs  ex03.hs  ex04.hs  ex05.hs  ex06.hs  ex07.md  ex08.md  ex09.md  ex10.hs  ex11.hs  ex12.hs  ex13.hs  ex14.hs
ch10/: ch10-01.hs  ex01.md  ex02.hs  ex03.hs  ex04.hs  ex05.hs  ex05.md  ex06.hs
ch11/: ch11-01.hs  ch11-02.hs  ch11-03.hs  ch11-04.hs  ch11-05.hs  ch11-06.hs  ch11-07.hs  ch11-08.hs  ch11-09.hs  ch11-10.hs  ex01.md  ex02.hs  ex03.md  ex04.hs  ex05.hs  ex06.hs  ex07.md  ex08.md  ex09.hs  ex10.md  ex11.hs  ex12.hs  ex13.hs  ex14.hs  ex15.hs
ch12/: ch12-01.hs  ch12-02.hs  ch12-03.hs  ch12-04.hs  ex01.md  ex02.hs  ex03.hs  ex04.hs  ex05.hs  ex06.hs  ex07.hs  ex08.hs
ch13/: ch13-01.hs  ex01.md  ex02.hs  ex03.hs
ch13/cipher/: cipher.cabal
ch13/cipher/exe/: Main.hs
ch13/cipher/src/: Cipher.hs
ch13/cipher/tests/: tests.hs
ch13/hangman/: hangman.cabal
ch13/hangman/src/: Hangman.hs  Main.hs
ch13/hangman/tests/: tests.hs
ch14/addition/: Addition.hs  addition.cabal
ch14/exercises/: exercises.cabal
ch14/exercises/src/: Exercises.hs
ch14/exercises/tests/: generators.hs  idem_tests.hs  tests.hs
ch14/morse/src/: Main.hs  Morse.hs
ch14/morse/tests/: tests.hs
ch14/numwords/: numwords.cabal
ch14/numwords/src/: Numwords.hs
ch14/numwords/tests/: tests.hs
ch14/practice/: CoArbitrary.hs  practice.cabal
ch14/practice/src/: Main.hs
ch15/: ch15-01.hs  ch15-02.hs  ex01.hs  ex02.hs  ex03.hs  ex04.hs  ex05.hs  ex06.hs  ex07.hs  ex08.hs
ch15/orphan-instance/: Listy.hi  Listy.hs  ListyInstances.hi  ListyInstances.hs
ch15/practice/: practice.cabal
ch15/practice/src/: Lib.hs
ch15/practice/tests/: tests.hs
ch16/: ch16-01.hs  ch16-02.hs  ch16-03.hs  ch16-04.hs  ch16-05.hs  ch16-06.hs  ch16-07.hs  ch16-08.hs  ch16-09.hs  ch16-10.hs  ch16-11.hs  ch16-12.hs  ex01.md  ex02.hs  ex03.hs  ex04.hs  ex05.hs  ex06.hs  ex07.hs  ex08.hs  ex09.hs  ex10.hs  ex11.hs  ex12.hs
ch17/: ch17-01.hs  ch17-02.hs  ch17-03.hs  ch17-04.hs  ch17-05.hs  ex01.hs  ex02.hs  ex03.hs  ex04.hs  ex05.hs  ex06.hs  ex07.hs  ex08.hs  ex09.hs
ch18/: ch18-01.hs  ch18-02.hs  ch18-03.hs  ch18-04.hs  ch18-05.hs  ch18-06.hs  ch18-07.hs  ch18-08.hs  ex01.hs  ex02.hs  ex03.hs  ex04.hs  ex05.hs
ch19/: ch19-01.hs  ch19-02.hs  ch19-03.hs
ch19/shorty/: shorty.cabal
ch19/shorty/src/: Main.hs
ch20/: ch20-01.hs  ex01.hs  ex02.hs
ch21/: ch21-01.hs  ch21-02.hs  ex01.hs  ex02.hs  ex03.hs
ch21/the-net/: the-net.cabal
ch21/the-net/src/: Main.hs
ch22/: ch22-01.hs  ch22-02.hs  ch22-03.hs  ch22-04.hs  ch22-05.hs  ex01.hs  ex02.hs  ex03.hs  ex04.hs  ex05.hs  ex06.hs
ch23/: ch23-01.hs  ch23-02.hs  ch23-03.hs  ex01.hs  ex02.hs  ex03.hs  ex04.hs
ch24/: ch24-01.hs  ch24-02.hs  ch24-03.hs  ch24-04.hs  ch24-05.hs  ch24-06.hs  ch24-07.hs  ch24-08.hs  ch24-09.hs  ch24-10.hs  ex01.hs  ex02.hs  ex03.hs  ex04.hs  ex05.hs  ex06.hs  ex07.hs  ex08.hs
ch25/: ch25-01.hs  ch25-02.hs  ch25-03.hs  ch25-04.hs  ex01.hs  ex03.hs
ch26/: ch26-01.hs  ch26-02.hs  ch26-03.hs  ex01.hs  ex02.hs  ex03.hs  ex04.hs  ex05.hs  ex06.hs  ex07.hs  ex08.hs  morra.hs  scotty.hs  scotty2.hs  scotty3.hs  scotty4.hs  scotty5.hs  scotty6.hs
ch27/: ch27-01.hs  ch27-02.hs  ch27-03.hs  ch27-04.hs  ch27-05.hs  ch27-06.hs  ch27-07.hs  ch27-08.hs  ch27-09.hs  ch27-10.hs  ch27-11.hs  ch27-12.hs  ex01.md  ex02.hs  ex03.md  ex04.md  ex05.hs
ch28/: bench.hi  bench.hs
ch28/benchmarking/: bench.hi  bench2.hi  bench2.hs  bench3.hi  bench3.hs
ch28/exercises/: ex01.hi  ex01.hs  ex02.hs
ch28/maps/: maps01.hi  maps01.hs
ch28/profiling/: caf  caf.hi  caf.hs  caf.prof  caf2  caf2.hi  caf2.hs  caf2.prof  caf3  caf3.hi  caf3.hs  caf3.prof  profiling1  profiling1.hs  profiling1.prof  profiling2  profiling2.aux  profiling2.hp  profiling2.hs  profiling2.prof  profiling2.ps
ch28/seqs/: seq01.hi  seq01.hs  seq02.hi  seq02.hs
ch28/sets/: ex01.hi  ex01.hs  sets01.hi  sets01.hs
ch28/strings/: str01  str01.hi  str01.hs  str01.prof  str02  str02.hi  str02.hs  str02.prof  str03.hs  str04.hs
ch28/vecs/: vec01.hi  vec01.hs  vec02.hi  vec02.hs  vec03.hi  vec03.hs  vec04.hi  vec04.hs
ch29/: ch29-01.hs  ch29-02.hs  ch29-03.hs  ch29-04.hs  ch29-05.hs  ch29-06.hs
ch29/cipher/: cipher.cabal  input.txt
ch29/cipher/src/: Main.hs
ch29/ini-parsing/: ini-parser.hs  test2.ini
ch30/: ch30-01.hs  ch30-02.hs  ch30-03.hs  ch30-04.hs  ch30-05.hs  ch30-06.hs  ch30-07.hs  ch30-08.hs  ch30-09.hs
ch31/fingerd/: fingerd.cabal
ch31/fingerd/src/: Debug.hs  FingerD.hs  Main.hs  UpdateF.hs
