name:                hangman
version:             0.1.0.0
synopsis:            Playing hangman
description:         Hangman game from haskellbook.com
homepage:            https://github.com/danhlutz/
license:             BSD3
license-file:        LICENSE
author:              Dan Lutz (based on Chris Allen and Julie Moronuki)
maintainer:          danhlutz@gmail.com
copyright:           2018 Author name here
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Hangman
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <5
                     , random
                     , split

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.7 && <5
                     , hangman
                     , QuickCheck
  default-language:    Haskell2010

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
