name:                exercises
version:             0.1.0.0
license-file:        LICENSE
author:              Dan Lutz
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Exercises
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.7 && <5
                     , exercises
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010

test-suite idem_tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             idem_tests.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.7 && <5
                     , exercises
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010
