-- numwords.cabal
name:                numwords
version:             0.1.0.0
license-file:        LICENSE
author:              Dan Lutz
maintainer:          danhlutz@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Numwords
  ghc-options:       -Wall -fwarn-tabs
  hs-source-dirs:    src
  build-depends:     base >= 4.7 && <5
                   , containers
                   , hspec
                   , QuickCheck
  default-language:  Haskell2010

test-suite tests
  ghc-options:       -Wall -fno-warn-orphans
  type:              exitcode-stdio-1.0
  main-is:           tests.hs
  hs-source-dirs:    tests
  build-depends:     base >=4.7 && <5
                   , containers
                   , numwords
                   , hspec
                   , QuickCheck
  default-language:  Haskell2010
